attemp to fix letter spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  letter-spacing: normal;
 }
 a {
   text-decoration: none;
